<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_khachsan">

    <fragment
        android:id="@+id/navigation_khachsan"
        android:name="com.chuyende.hotelbookingappofadmin.ui.khachsan.FragmentKhachSan"
        android:label="@string/title_khachsan"
        tools:layout="@layout/fragment_khachsan" />

    <fragment
        android:id="@+id/navigation_nguoidung"
        android:name="com.chuyende.hotelbookingappofadmin.ui.nguoidung.FragmentNguoiDung"
        android:label="@string/title_nguoidung"
        tools:layout="@layout/fragment_nguoidung" />

    <fragment
        android:id="@+id/navigation_thongke"
        android:name="com.chuyende.hotelbookingappofadmin.ui.thongke.FragmentThongKe"
        android:label="@string/title_thongke"
        tools:layout="@layout/fragment_thongke" />
</navigation>