<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/template"
    android:orientation="vertical"
    tools:context=".ui.DangNhap">

    <ImageView
        android:layout_width="196dp"
        android:layout_height="224dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="Tên Đăng nhập"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtTenDangNhap"
            style="@style/edit_text"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittext"
            android:hint="@string/hint_username" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="Mật khẩu"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMatKhau"
            style="@style/edit_text"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittext"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDangNhap"
        style="@style/button"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_selector"
        android:text="@string/dangnhap" />
</LinearLayout>